css and 'close x link' was removed

--- a/index.html
+++ b/index.html
@@ -7,7 +7,27 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	<body>
-    <div id="container"></div>
+    <div class="container">
+        <div class="header">
+             <h3>Who to follow</h3><a href="#" class="refresh">Refresh</a>
+        </div>
+        <ul class="suggestions">
+            <li class="suggestion1">
+                <img class="picture1" />
+                <a href="#" target="_blank" class="username">this will not be displayed</a>
+            </li>
+            <li class="suggestion2">
+                <img class="picture2" />
+                <a href="#" target="_blank" class="username">neither this</a>
+                <a href="#" class="close close2">x</a>
+            </li>
+            <li class="suggestion3">
+                <img class="picture3" />
+                <a href="#" target="_blank" class="username">nor this</a>
+                <a href="#" class="close close3">x</a>
+            </li>
+        </ul>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
